--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 server.port = 9090
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=1dw1we1121f1ff
+spring.datasource.username=spring
+spring.datasource.password=test1234
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
 
